# dota-cuck

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  buf.gen.yaml  buf.yaml  docker-compose.yml
.github/workflows/: ci.yml
control-plane/: Dockerfile  go.mod  go.sum
control-plane/cmd/server/: main.go
control-plane/db/migrations/: 001_init.sql  002_user_kdf_salt.sql  003_steam_id_nullable.sql  (+1 more)
control-plane/docs/: docs.go  swagger.json  swagger.yaml
docs/: database.md  deployment.md  grpc-contract.md  known-risks.md  testing.md  validation-results.md  worker.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  auth.js  status.js  styles.css  webrtc.js  ws.js
mediamtx/: mediamtx.yml
nginx/: nginx.conf
scripts/: with-test-db.sh
scripts/validation/: Dockerfile.steam  Dockerfile.xtest  ocr.sh  supervisord.conf  v1_headless_gpu.sh  v2_install.sh  v3_gc_matchid.py  v4_dual_session.sh  v4_steam_phase.py  v5_spectate.sh  v6_nvenc.sh  v6_srt_mediamtx.sh  xorg-input.conf  xorg.steam.conf
worker/: Dockerfile  agent.py  dota_client.py  ffmpeg.py  grpc_client.py  pyproject.toml  pytest.ini  requirements.txt  state_machine.py  steam_client.py  steam_gui.py
worker/deploy/: input-bind.sh  run-worker.sh  run-xorg.sh  supervisord.conf
worker/tests/: test_command_dispatch.py  test_dota_decisions.py  test_ffmpeg.py  test_friends.py  test_link.py  test_match_id.py  test_spectate_dispatch.py  test_state_machine.py  test_steam_gui.py  test_steam_session.py
worker/xorg/: xorg.conf
(+77 files in other folders)
